jquery scrolltofixed contents script added

--- a/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
@@ -11,6 +11,13 @@
 		<h5>{{distrodata.os_type|lower}}</h5>
 	</div>
 
+	<script type="text/javascript">
+		$(document).ready(function() {
+  			$('#contents').scrollToFixed({
+				marginTop: 10,
+			});
+		});
+	</script>
 	<div id="contents">
 		<ul>
 			Jump to
