--- a/src/TnDW/WebBundle/Resources/public/css/main.css
+++ b/src/TnDW/WebBundle/Resources/public/css/main.css
@@ -99,7 +99,7 @@ h2 { margin: 0; padding: 40px 0 20px 0; text-align: center; font-family: zektonb
 #distro h3 { margin: 50px 50px 0 50px; color: rgb(88, 89, 91) ; font-family: zektonbo; font-size: 16px; text-align: center; }
 #distro #description { width: 60%; margin: auto; text-align: center; font-family: myriadpro; font-size: 13px; }
 
-#distro #contents { position: fixed; left: 20px; top: 200px; }
+#distro #contents { position: absolute; width: 130px; z-index: 1000; margin-left: -85px; }
 #distro #contents ul { font-family: zektonrg; font-size: 12px; color: rgb(88, 89, 91); }
 #distro #contents li { margin: 2px 0 0px 0; list-style: none; list-style-type: none; background-color: rgb(88, 89, 91); -webkit-transition: background-color 0.4s; }
 #distro #contents li a { padding: 6px 10px 6px 10px; text-decoration: none; color: #fff; margin: 0px; display: block; width: 100%; height: 100%; }
