--- a/src/TnDW/WebBundle/Resources/views/layout.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/layout.html.twig
@@ -7,6 +7,7 @@
         <link href="{{ asset('bundles/tndwweb/css/jquery.fancybox.css') }}" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery-1.8.3.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery.fancybox.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery-scrolltofixed-min.js') }}"></script>
     </head>
 
     <body>
