--- a/src/TnDW/WebBundle/Resources/views/layout.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/layout.html.twig
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery-1.8.3.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery.fancybox.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery-scrolltofixed-min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/general.js') }}"></script>
     </head>
 
     <body>
