--- a/src/TnDW/WebBundle/Resources/views/Distros/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/index.html.twig
@@ -5,8 +5,9 @@
 
 {% block body %}
 <div id="distros">
+	<h2>Distributions</h2>
     <ul>
-        <li>top 100</li>
+        <li>List</li>
     </ul>
 	<div id="distrolist">
 	    <div>
@@ -19,7 +20,6 @@
 	</div>
 </div>
 <script type="text/javascript">
-    function sortDistros() {
-    }
+    function sortDistros() { }
 </script>
 {% endblock %}
