--- a/src/TnDW/WebBundle/Resources/views/Security/login.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Security/login.html.twig
@@ -1,23 +1,34 @@
 {% extends "TnDWWebBundle::layout.html.twig" %}
 
 {% block body %}
-{% if error %}
-    <div>{{ error.message }}</div>
-{% endif %}
 
-<form action="{{ path('login_check') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<div id="login" class="text">
+	<h2>Login</h2>
+	{% if error %}
+	    <div>{{ error.message }}</div>
+	{% endif %}
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+	<form action="{{ path('login_check') }}" method="post">
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$("#username").focus();
+			});
+		</script>
+		<table>
+			<tbody>
+				<tr>
+					<td>Username</td>
+					<td><input type="text" id="username" name="_username" value="{{ last_username }}" /></td>
+				</tr>
+				<tr>
+					<td>Password</td>
+					<td><input type="password" id="password" name="_password" /></td>
+				</tr>
+			</tbody>
+		</table>
+	    <button type="submit">login</button>
+	</form>
 
-    {#
-        If you want to control the URL the user is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-
-    <button type="submit">login</button>
-</form>
+</div>
     
 {% endblock %}
