deployable fix for contents links

--- a/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
@@ -22,7 +22,9 @@
 		<ul>
 			Jump to
 			<li><a href="#desc-link">Description</a></li>
+			{% if deployable %}
 			<li><a href="#deploy">Deploy</a></li>
+			{% endif %}
 			<li><a href="#technical">Technical</a></li>
 			<li><a href="#screenshots">Screenshots</a></li>
 			<li><a href="#distro-updates">Updates</a></li>
