--- a/src/TnDW/WebBundle/Resources/views/About/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/About/index.html.twig
@@ -11,16 +11,25 @@
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
 
 	<h3>Documentation</h3>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
+	<p>Documentation for developers is generated through Doxygen. Both frontend and backend are well-commented. All sources are available from GitHub.</p>
+	<div id="docs">
+		<a href="https://github.com/jakubzitny/tndw-front">tndw-front at GitHub</a>
+		<a href="https://github.com/jakubzitny/tndw-controller">tndw-controller at GitHub</a>
+		<a href="https://github.com/jakubzitny/tndw-back">tndw-back at GitHub</a><br />
+		<a href="http://admin.thenewdistrowatch.eu/html/">tndw-controller Doxygen documentation</a>
+	</div>
+	<p>We thank following projects, without them there might be nothing: Django, Redis, phpRedisAdmin, OpenStack, BeeScale, GitHub. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
 
 	<h3>Contact</h3>
 	<div id="about-contact" class="text">
+		<p>Do you want to share something with us?</p>
 		<form action="#" method="get">
 			<input type="text" placeholder="name" />
-			<br />
 			<input type="email" placeholder="e-mail" />
+			<br />
 			<textarea></textarea>
-			<input type="submit" value="Send" />
+			<br />
+			<input type="submit" value="send e-mail" />
 		</form>
 	</div>
 </div>
