--- a/src/TnDW/WebBundle/Resources/views/layout.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/layout.html.twig
@@ -17,9 +17,13 @@
             <div id="header">
             	{% block header %}
                 <div id="header-top">
-                    <!--<p>The new<p>-->
+					<!--
+					<div id="circle"></div>
+					<h3>The new</h3>
+					-->
                     <div id="header-title">
                         <h1>Distrowatch</h1>
+						<h4>Un*x distribution portal</h4>
                     </div>
                     <div id="header-login">
                         <ul>
