--- a/src/TnDW/WebBundle/Resources/public/css/main.css
+++ b/src/TnDW/WebBundle/Resources/public/css/main.css
@@ -9,11 +9,15 @@ body { margin: 0 0px 0 0px; padding: 0; height: 100%; }
 
 /* HEADER */
 #header { font-family: zektonrg; width: 1000px; margin: auto; background-color: #fff; }
-#header-top { height: 50px; padding-top: 20px; }
+#header-top { height: 50px; padding-top: 15px; }
 #header-top p { position: absolute; top: 20px; left: 40px; }
 
+#header h3 { text-align: center; font-size: 12px; width: 20px; height: 20px; margin: 15px 0 0 12px; line-height: 14px; position: absolute; text-transform: lowercase; color: #fff; }
+#header #circle { -webkit-border-radius: 50%; width: 50px; height: 50px; margin: 7px 0 0 0px; position: absolute; text-transform: none; background-color: red;  }
+
 #header-title { position: relative; float: left; height: 50px }
-#header-title h1 { font-size: 25px ; padding-left: 60px; font-weight: 100; text-transform: uppercase; color: rgb(88, 89, 91) }
+#header-title h1 { font-size: 25px ; padding-left: 55px; font-weight: 100; text-transform: none; color: rgb(88, 89, 91) }
+#header-title h4 { font-size: 11px ; padding-left: 55px; font-weight: 100; color: rgb(88, 89, 91); text-transform: uppercase; margin-top: -18px; }
 
 #header-login { float: right; position: relative; z-index: 2; padding: 10px 20px 0 0; height: 50px; }
 #header-login ul { list-style: none; list-style-type: none; }
@@ -23,7 +27,7 @@ body { margin: 0 0px 0 0px; padding: 0; height: 100%; }
 #header-login ul li:hover a { color: rgb(88, 89, 91); 
                               -webkit-transition: color 0.3s; -moz-transition: color 0.3s; -o-transition: color 0.3s; transition: color 0.3s }
 
-#header-menu { background: rgb(88, 89, 91); padding-top: 15px; }
+#header-menu { background: rgb(88, 89, 91); padding-top: 15px; margin-top: 5px; }
 #header-menu ul { list-style: none; list-style-type: none; margin: 0; padding: 0 0 5px 40px; }
 #header-menu ul li { display: inline; text-transform: uppercase; padding: 0 5px 0 5px; }
 #header-menu ul li:first-child { padding: 0 5px 0 0; }
