--- a/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/Distros/distro.html.twig
@@ -38,7 +38,9 @@
 
 	<div id="links">
 		<ul>
+			{% if distrodata.links['homepage'] is defined and distrodata.links['homepage']|length > 0 %}
 			<li><a href={{distrodata.links['homepage'][0].href}}>Homepage</a></li>
+			{% endif %}
 			{% if distrodata.links['download_mirrors'] is defined and distrodata.links['download_mirrors']|length > 0 %}
 			<li><a href={{distrodata.links['download_mirrors'][0].href}}>Download</a></li>
 			{% endif %}
@@ -152,6 +154,7 @@
 	</div>
 
 
+	{% if distrodata.screenshots is defined and distrodata.screenshots | length > 0 %}
 	<div id="screenshots">
 		<script type="text/javascript">
    			$(document).ready(function() {
@@ -184,6 +187,7 @@
 		</div>
 		-->
 	</div>
+	{% endif %}
 
 	<div id="cols">
 		<div id="left">
@@ -219,10 +223,12 @@
 		<div class="clear"></div>
 	</div>
 
+	<!--
 	<div id="software">
 		<h3>Software</h3>
 		<p>TODO</p>
 	</div>
+	-->
 
 	<!--
 	<h3>Origin</h3>
