--- a/src/TnDW/WebBundle/Resources/views/About/index.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/About/index.html.twig
@@ -5,10 +5,7 @@
 {% block body %}
 <div id="about" class="text">
 	<h2>About</h2>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
-
-	<h3>FAQ</h3>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
+	<p>This project hopes to bring new way to distribute information about various operating systems. Especially multifarious Linux distributions but also other open-source systems. There are so many of them it is not easy to get to know or try out each one. The output of this work is design and implementation of web application which displays information about operating systems on well designed pages. These information come from automatic procedures scanning the inside of operating systems and the internet. Besides displaying information, the website gives a chance for visitors to try out specific operating systems right in their browser. This project is inspired by ideas behind distrowatch.com - a popular website providing updates and rankings of Linux distributions.</p>
 
 	<h3>Documentation</h3>
 	<p>Documentation for developers is generated through Doxygen. Both frontend and backend are well-commented. All sources are available from GitHub.</p>
@@ -18,7 +15,7 @@
 		<a href="https://github.com/jakubzitny/tndw-back">tndw-back at GitHub</a><br />
 		<a href="http://admin.thenewdistrowatch.eu/html/">tndw-controller Doxygen documentation</a>
 	</div>
-	<p>We thank following projects, without them there might be nothing: Django, Redis, phpRedisAdmin, OpenStack, BeeScale, GitHub. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque quam id orci porttitor blandit et eu elit. In sodales lorem ac justo ultricies condimentum. Nullam feugiat pulvinar convallis. Mauris ac nulla est. Vivamus nisl sem, semper ac bibendum eget, vehicula tempor velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent a urna at sem facilisis malesuada a ut felis. Phasellus nec nibh vel augue eleifend rutrum sit amet at elit. Duis et odio odio.  </p>
+	<p>We thank following projects, without them there might be nothing: Django, Redis, phpRedisAdmin, OpenStack, BeeScale, GitHub.</p>
 
 	<h3>Contact</h3>
 	<div id="about-contact" class="text">
