--- a/src/TnDW/WebBundle/Resources/public/css/main.css
+++ b/src/TnDW/WebBundle/Resources/public/css/main.css
@@ -36,8 +36,8 @@ body { margin: 0 0px 0 0px; padding: 0; height: 100%; }
 #header-menu ul li:hover a { color: rgb(230, 157, 29); 
 	-webkit-transition: color 0.3s; -moz-transition: color 0.3s; -o-transition: color 0.3s; transition: color 0.3s }
 
-#header-menu #search { cursor: pointer; float: right; margin: -22px 30px 0px 0; color: #fff }
-#header-menu #search:hover { cursor: pointer; float: right; margin: -22px 30px 0px 0; color: rgb(230, 157, 29);
+#header-menu #searchul { cursor: pointer; float: right; margin: -22px 30px 0px 0; color: #fff }
+#header-menu #searchul:hover { cursor: pointer; float: right; margin: -22px 30px 0px 0; color: rgb(230, 157, 29);
 	-webkit-transition: color 0.3s; -moz-transition: color 0.3s; -o-transition: color 0.3s; transition: color 0.3s; }
  
 .unselected { color: #fff; }
@@ -148,12 +148,13 @@ h3 { margin: 0; padding: 0px 0 0px 0; text-align: center; font-family: zektonbo;
 #distro #deploy table td:hover { background-color: rgba(230, 157, 29, 0.2); cursor: pointer; }
 #distro #deploy table td:first-child { background-color: rgba(230, 157, 29, 0.2); }
 
-#distro #status { text-align: center; margin: 0px 0 0px 0; color: #ccc; font-family: zektonrg; font-size: 13px; }
+#distro #status { text-align: center; margin: 0px 0 20px 0; color: #ccc; font-family: zektonrg; font-size: 13px; }
 
 #distro #technical { text-align: left; font-family: myriadpro; margin: auto auto 50px auto; width: 700px; font-family: myriadpro; font-size: 14px; }
-#distro #technical ul { font-weight: bold; font-size: 13px; padding: 0 50px 0 50px; }
-#distro #technical hr { width: 80%; color: #ccc; background-color: #ccc; border: 0; height: 1px; float: left; }
-#distro #technical ul li { font-weight: normal; display: inline; list-style: none; list-style-type: none; }
+#distro #technical h4 { font-weight: bold; font-size: 13px; padding: 0 50px 0 50px; margin: 0; }
+#distro #technical ul { padding: 0 50px 0 50px; margin: 0; }
+#distro #technical hr { width: 100%; color: #ccc; background-color: #ccc; border: 0; height: 1px; }
+#distro #technical ul li { font-weight: normal; font-size: 12px; display: inline; list-style: none; list-style-type: none; }
 #distro #technical ul li a { text-decoration: none; color: #000; }
 #distro #technical ul li:hover { background-color: #ccc; cursor: pointer; }
 
