--- a/src/TnDW/WebBundle/Resources/public/css/main.css
+++ b/src/TnDW/WebBundle/Resources/public/css/main.css
@@ -114,7 +114,8 @@ h3 { margin: 0; padding: 0px 0 0px 0; text-align: center; font-family: zektonbo;
 #distro #description { width: 60%; margin: auto; text-align: center; font-family: myriadpro; font-size: 13px; }
 
 #distro #contents { position: absolute; width: 130px; z-index: 1000; margin-left: -85px; }
-#distro #contents ul { font-family: zektonrg; font-size: 12px; color: rgb(88, 89, 91); }
+#distro #contents #jumpto { font-family: zektonrg; font-size: 12px; color: rgb(88, 89, 91); margin: 0 0 0 38px; }
+#distro #contents ul { font-family: zektonrg; font-size: 12px; color: rgb(88, 89, 91); margin: 0; }
 #distro #contents li { margin: 2px 0 0px 0; list-style: none; list-style-type: none; background-color: rgb(88, 89, 91);
 	-webkit-transition: background-color 0.4s; -moz-transition: background-color 0.4s; -o-transition: background-color 0.4s; transition: background-color 0.4s; }
 #distro #contents li a { padding: 6px 10px 6px 10px; text-decoration: none; color: #fff; margin: 0px; display: block; width: 100%; height: 100%; }
