--- a/src/TnDW/WebBundle/Resources/views/layout.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix="fb: http://www.facebook.com/2008/fbml" prefix="og: http://opengraphprotocol.org/schema/">
+<html lang="en" prefix="fb: http://www.facebook.com/2008/fbml og: http://opengraphprotocol.org/schema/">
     <head>
 		<meta charset='utf-8'>
         <title>{% block title %}TNDW{% endblock %}</title>
