--- a/src/TnDW/WebBundle/Resources/views/layout.html.twig
+++ b/src/TnDW/WebBundle/Resources/views/layout.html.twig
@@ -4,6 +4,7 @@
 		<meta charset='utf-8'>
         <title>{% block title %}TNDW{% endblock %}</title>
         <link href="{{ asset('bundles/tndwweb/css/main.css') }}" rel="stylesheet" type="text/css" />
+        <link href="{{ asset('bundles/tndwweb/css/fonts.css') }}" rel="stylesheet" type="text/css" />
         <link href="{{ asset('bundles/tndwweb/css/jquery.fancybox.css') }}" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery-1.8.3.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/tndwweb/js/jquery.fancybox.js') }}"></script>
